@@ -54,6 +54,15 @@ Why:
  Obsoleted long time ago (2005-01-22). Remaining packages should switch to
  use 'dpkg --print-architecture'.
 
+What --forget-old-unavail (dpkg option)
+Status: obsolete
+When: 1.16.x
+Warning: program
+Why:
+ Purged packages are properly cleaned up now by dpkg, and old unavailable
+ leftovers are automatically cleaned up on database parsing. So there's no
+ need anymore for this manual action.
+
 History of feature removals
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
