@@ -83,8 +83,6 @@ do
 	esac	
 done
 
-dpkg --forget-old-unavail
-
 echo -n 'Update OK.  Hit RETURN.  '
 read response
 
