@@ -203,7 +203,8 @@ available with information from the package \fIpackage_file\fP. If
 must refer to a directory instead.
 .TP
 .B \-\-forget\-old\-unavail
-Forget about uninstalled unavailable packages.
+Now \fBobsolete\fP and a no-op as \fBdpkg\fP will automatically forget
+uninstalled unavailable packages.
 .TP
 .B \-\-clear\-avail
 Erase the existing information about what packages are available.
